0025368: BREPExtrma DistShapeShape gives wrong result for Sphere and Line

Changed analytical Sphere/Line and Cylinder/Line extrema algorithms. Now they search perpendicular and intersection points.
Test cases added.